Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextObjBoolean.quorum
class Main
    action Main
        boolean v = true
        Test(v)
    end

    action Test(Text var)
    end
end
